2006-08-21 [colin]	0.10.2cvs7

	* src/gtkhtml2_prefs.c
	* src/gtkhtml2_prefs.h
	* src/gtkhtml2_viewer.c
		Implement image cache

2006-08-18 [paul]	0.10.2cvs6

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-08-17 [colin]	0.10.2cvs5

	* src/gtkhtml2_viewer.c
		Don't verify certificate on https

2006-08-09 [colin]	0.10.2cvs4

	* src/gtkhtml2_viewer.c
		Don't wait for stuff loading if we're
		exiting. Requires SC 2.4.0cvs36

2006-08-09 [colin]	0.10.2cvs3

	* src/gtkhtml2_viewer.c
		- Implement non-blocking I/O (allows switching to 
		  another mail before images are loaded on the
		  current one
		- Add a NoticeView to tell there were images if
		  they weren't loaded for some reason
		Please test :)

2006-08-03 [colin]	0.10.2cvs2

	* src/gtkhtml2_viewer.c
		Use base href in <a> links too

2006-08-03 [colin]	0.10.2cvs1

	* src/gtkhtml2_viewer.c
		Handle base_url property as
		given by libgtkhtml2, for use in
		request_url callback. Why can't
		libgtkhtml2 handle it by itself
		is another question.

2006-08-02 [paul]	0.10.2

	0.10.2 released

2006-06-26 [colin]	0.10.1cvs2

	* src/gtkhtml2_viewer.c
		Let the scrolled window look like the
		normal textview (Thanks to Fabien)

2006-06-21 [colin]	0.10.1cvs1

	* configure.ac
		Fix missing pthread support

2006-06-12 [paul]	0.10.1

	0.10.1 released

2006-06-12 [paul]	0.10.0cvs4

	* po/Makefile.in.in
		fix autoconf warning

2006-06-12 [paul]	0.10.0cvs3

	* configure.ac
	* po/fr.po
		new translation, submitted by Fabien Vantard <fzzzzz@gmail.com>

2006-06-06 [wwp]	0.10.0cvs2

	* configure.ac
	* src/.cvsignore
	* src/plugin_version.h.in
	* src/gtkhtml2_viewer.c
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead).

2006-06-03 [wwp]	0.10.0cvs1

	* commitHelper
	* PATCHSETS
	* configure.ac
		introducing commitHelper for plugins too.

2006-04-27 [colin] 	0.10

	* configure.ac
	* po/pl.po
		Polish translation
		Patch by Pawel Pekala.
